syntax = "proto3";

package v1;

option go_package = "github.com/VoidMesh/backend/src/api/v1;v1";

// Resource type definition.
message Resource {
  string id = 1;
  string name = 2;
  string description = 3;
}

// The resource service definition.
service ResourceService {
  rpc ListResources (ListResourcesRequest) returns (ListResourcesResponse) {}
  rpc ReadResource (ReadResourceRequest) returns (ReadResourceResponse) {}
  rpc ObtainResource (ObtainResourceRequest) returns (ObtainResourceResponse) {}
}

message ListResourcesRequest {}

message ReadResourceRequest {
  Resource resource = 1;
}

message ObtainResourceRequest {
  Resource resource = 1;
}

message ReadResourceResponse {
  Resource resource = 1;
}

message ObtainResourceResponse {
  Resource resource = 1;
  float amount = 2;
}

message ListResourcesResponse {
  repeated Resource resources = 1;
}
